[tool.poetry]
name = "frc-atlas-site"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Sphinx = "^7.2.6"
furo = "^2023.9.10"
sphinx-autobuild = "^2021.3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
